--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,4 +48,10 @@
         <item name="android:textColor">@color/TC_2</item>
         <item name="android:textAllCaps">false</item>
     </style>
+    <!--星星的样式-->
+        <style name="foodRatingBar" parent="@android:style/Widget.RatingBar">
+            <item name="android:progressDrawable">@drawable/ratingstars</item>
+            <item name="android:minHeight">13dip</item>
+            <item name="android:maxHeight">30dip</item>
+        </style>
 </resources>
