--- a/app/src/main/res/layout/recyclerview_item_layout.xml
+++ b/app/src/main/res/layout/recyclerview_item_layout.xml
@@ -1,39 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:background="#ffffff">
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#ffffff">
 
     <LinearLayout
         android:id="@+id/item_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
+        <LinearLayout android:layout_width="match_parent"
+                      android:orientation="horizontal"
+                      android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/item_content"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="left|center_vertical"
+                android:paddingLeft="15dp"
+                android:text="0"
+                android:textColor="#000000"
+                android:textSize="15sp"/>
+            <TextView
+                android:id="@+id/item_price"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="right|center_vertical"
+                android:paddingLeft="15dp"
+                android:text="￥100"
+                android:paddingRight="15dp"
+                android:textColor="#000000"
+                android:textSize="15sp"/>
 
-        <TextView
-            android:id="@+id/item_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="0"
-            android:textColor="#000000"
-            android:textSize="20sp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/item_delete"
-            android:layout_width="100dp"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:background="#88ff0000"
+            android:background="@color/TC_3"
             android:gravity="center"
             android:text="删除"
             android:textColor="#ffffff"
-            android:textSize="20sp" />
+            android:textSize="15sp"/>
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
-        android:background="#55000000" />
+        android:background="@color/background_gray"/>
 
 </RelativeLayout>
