--- a/app/src/main/res/layout/draw_menu_layout.xml
+++ b/app/src/main/res/layout/draw_menu_layout.xml
@@ -18,6 +18,7 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:id="@+id/rl_user_info"
             android:layout_width="match_parent"
             android:layout_height="154dp">
 
