--- a/app/src/main/res/layout/base_empty_pager.xml
+++ b/app/src/main/res/layout/base_empty_pager.xml
@@ -9,8 +9,8 @@
     android:gravity="center">
     <ImageView
         android:id="@+id/empty_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/icon_fail" />
     <TextView
